<resources>
    <string name="app_name">Ka\'bah Finder</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="gps_settings_title">GPS settings</string>
    <string name="gps_settings_text">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok">Settings</string>
    <string name="settings_button_cancel">Cancel</string>
    <string name="msg_permission_not_granted_yet">Location access not available yet</string>
    <string name="msg_permission_granted">Location Access Granted, press GPS button now.</string>
    <string name="toast_permission_required">This app requires Access Location</string>
    <string name="your_location">Lokasi anda : </string>
    <string name="location_not_ready">Location not ready, please press button again.</string>
    <string name="qibla_direction">Arah Ka\'bah : </string>
    <string name="pls_enable_location">Please turn on Location and press the button again.</string>
    <string name="degree_from_north">º dari Utara.</string>
    <string name="using_last_location">menggunakan lokasi terakhir.</string>
    <string name="subtitle">Temukan Arah Ka\'bah \ndimanapun berada</string>
    <string name="compass_notice">Kindly rotate your phone and make 8 in air in order to get accurate qibla direction.</string>
</resources>